--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
-	"name": "MyFirstMod",
-	"version_number": "1.0.0",
-	"website_url": "",
-	"description": "My first Mod",
+	"name": "BetterCommandArtifact",
+	"version_number": "1.1.0",
+	"website_url": "https://github.com/BooopDev/BetterCommandArtifact",
+	"description": "Fixes the Artifact By Limiting The Amount of Items Shown",
 	"dependencies": [
-		"bbepis-BepInExPack-5.4.9",
-		"RiskofThunder-HookGenPatcher-1.2.1"
+		"bbepis-BepInExPack-5.4.1902",
+		"RiskofThunder-HookGenPatcher-1.2.3"
 	]
 }
